--- a/index.html
+++ b/index.html
@@ -4,61 +4,141 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a1857598c9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Griot Theater</title>
 </head>
 <body>
-    <nav>
-        <div class="nav-container">
-            <div class="navbar-theater"> <a href="#">Griot Theater</a></div>
-            <div class="navbar-list">
-                <ul>
-                    <li>Home</li>
-                    <li>Features</li>
-                    <li>Our Actios</li>
-                    <li>Mission</li>
-                    <li>Contact</li>
-                </ul>
+    <div class="grid-container">
+        <!-- Navbar  -->
+        <div class="navbar-container">
+            <ul class="navlist">
+                <li class="nav-item-1"><a class="title" href="#">Griot Theater</a></li>
+
+                <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
+
+                <li class="nav-item"><a href="home.html" class="nav-link">Features</a></li>
+
+                <li class="nav-item"><a href="home.html" class="nav-link">Our Actions</a></li>
+
+                <li class="nav-item"><a href="home.html" class="nav-link">Mission</a></li>
+
+                <li class="nav-item"><a href="home.html" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
+        <!-- Main Image -->
+        <div class="main-image-container">
+            <h1 class="featured-shows">Featured Shows</h1>
+        </div>
+        <!-- Date -->
+        <div class="date-container">
+            <!-- <form action="action_page.php">
+                <label for="event date"></label>
+                <input type="date" max="2029-10" id="event-date">
+            </form> -->
+            <date class="date date-border">April 2020</date>
+        </div>
+        <!-- Flyer tiles -->
+        <div class="flyer-tiles">
+            <div class="grid-container-2">
+                <div class="flyer">
+                    <div class="flyer-tiles-b">
+                        <div class="thumbnail-img">
+                            <img class="thumbnail-img-1" src="/images/a-raisin-in-the-sun-theater-1.png" alt="">
+                        </div>
+                            <ul class="flyer-1">
+                                <li><h3>A Raisin In The Sun</h3></li>
+                                <li><date>April 6, 2020 - March 12 2021</date></li><br>
+                                <li><address>Griot Theater, 233 State St Chicago, IL</address></li><br>
+                                <li><price>$75</price></li>
+                            </ul>
+                        <label for="readmore" class="readmore">Read More</label>
+                    </div>
+                </div>
+
+                <div class="flyer">
+                    <div class="flyer-tiles-b">
+                        <div class="thumbnail-img">
+                            <img class="thumbnail-img-1" src="/images/a-raisin-in-the-sun-theater-1.png" alt="">
+                        </div>
+                            <ul class="flyer-1">
+                                <li><h3>A Raisin In The Sun</h3></li>
+                                <li><date>April 6, 2020 - March 12 2021</date></li><br>
+                                <li><address>Griot Theater, 233 State St Chicago, IL</address></li><br>
+                                <li><price>$75</price></li>
+                            </ul>
+                        <label for="readmore" class="readmore">Read More</label>
+                    </div>    
+                </div>
+
+                <div class="flyer">
+                    <div class="flyer-tiles-b">
+                        <div class="thumbnail-img">
+                            <img class="thumbnail-img-1" src="/images/a-raisin-in-the-sun-theater-1.png" alt="">
+                        </div>
+                            <ul class="flyer-1">
+                                <li><h3>A Raisin In The Sun</h3></li>
+                                <li><date>April 6, 2020 - March 12 2021</date></li><br>
+                                <li><address>Griot Theater, 233 State St Chicago, IL</address></li><br>
+                                <li><price>$75</price></li>
+                            </ul>
+                        <label for="readmore" class="readmore">Read More</label>  
+                    </div>    
+                </div>
             </div>
         </div>
-    </nav>
-
-    <div>
-        <h1>Featured Shows</h1>
+        <!-- Footer -->
+        <footer>
+            <div class="bottom">
+                <div class="map">
+                    <img class="mapimg" src="/images/Chicago-map.png" alt="map location">
+                </div>
+                <div class="footinfo">
+                    <div class="foothead">Info</div>
+                    <div class="location">
+                        <p class="tiny"><i class="fas fa-map-marker-alt"></i>Townsville, UL 55555 United States</p>
+                    </div><br>
+                    <div class="email">
+                        <p class="tiny"><i class="far fa-envelope"></i>example@example.com</p>
+                    </div><br>
+                    <div class="phone">
+                        <p class="tiny"><i class="fas fa-mobile-alt"></i>Call Us: (555)-555-5555</p>
+                    </div>
+                </div>
+                <div class="footshows">
+                    <div class="foothead">Shows</div>
+                    <div class="piano">
+                        <a><p class="tiny">Hilltop Underground</a>
+                    </div><br>
+                    <div class="raisin">
+                        <a><p class="tiny">Eastville Juggler</a>
+                    </div><br>
+                    <div class="fame"><a><p class="tiny">Live Pavilion</a>
+                    </div><br>
+                    <div class="purple"><a><p class="tiny">The Venue</a>
+                    </div>
+                </div>
+                <div class="social">
+                    <div class="foothead">Social</div>
+                    <div class="fb">
+                        <p class="tiny">
+                            <a><i class="fab fa-facebook"></i> Facebook</p></a>
+                    </div><br>
+                    <div class="tw">
+                        <p class="tiny">
+                            <a><i class="fab fa-twitter-square"></i> Twitter</p></a>
+                    </div><br>
+                    <div class="yt">
+                        <p class="tiny">
+                            <a><i class="fab fa-youtube"></i> YouTube</p></a>
+                    </div><br>
+                    <div class="ig">
+                        <p class="tiny">
+                            <a><i class="fab fa-instagram"></i> Instagram</p></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-
-    <div>
-        <p>April 2020</p>
-    </div>
-
-    <div>
-        <div>
-            <h2>A Raisin In The Sun</h2>
-            <date>April 6, 2020-March 12 2021</date>
-            <address>Griot Theater, 233 State St Chicago, IL</address>
-            <price>$75</price>  
-        </div>
-        <div>
-            <h2>A Raisin In The Sun</h2>
-            <date>April 6, 2020-March 12 2021</date>
-            <address>Griot Theater, 233 State St Chicago, IL</address>
-            <price>$75</price>  
-        </div>
-        <div>
-            <h2>A Raisin In The Sun</h2>
-            <date>April 6, 2020-March 12 2021</date>
-            <address>Griot Theater, 233 State St Chicago, IL</address>
-            <price>$75</price>  
-        </div>
-        <div>
-            <h2>A Raisin In The Sun</h2>
-            <date>April 6, 2020-March 12 2021</date>
-            <address>Griot Theater, 233 State St Chicago, IL</address>
-            <price>$75</price>  
-        </div>
-    </div>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
